[FIX] spreadsheet_edition: thread popover dark mode
We overwrite the CSS of the thread popover to prevent it from being
displayed in dark mode, but we missed the CSS of some elements.

closes odoo/enterprise#69873

Task: 4111072
X-original-commit: 1346ebe24419c77f49e6eca63d22f81240fd71ea

--- a/spreadsheet_edition/static/src/bundle/comments/components/cell_thread_style.scss
+++ b/spreadsheet_edition/static/src/bundle/comments/components/cell_thread_style.scss
@@ -11,7 +11,7 @@
     }
 
     .o-cell-thread-body {
-        overflow-y: auto; 
+        overflow-y: auto;
     }
 
     .o-mail-Composer {
@@ -47,25 +47,6 @@
     .o-thread-highlight {
         &, .o-cell-thread {
             background-color: #E8EDFF;
-        }
-    }
-}
-
-/** Shame css to counteract dark mode */
-.o-spreadsheet {
-    .o-cell-thread, .o-thread-start-composer {
-        background-color: white;
-    }
-
-    .o-mail-Composer{
-        .border {
-            border-color: $o-gray-300 !important;
-        }
-        .bg_view {
-            background-color: white !important;
-        }
-        .o-mail-Composer-send {
-            color: white !important;
         }
     }
 }
